# dorg

./: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  install  install.sh  specification.md
app/: CMakeLists.txt
app/app/: main.cpp  main.hpp  utility.hpp
app/assets/: default.yml  user.yml
libs/libapp/: CMakeLists.txt
libs/libapp/libapp/: args.cpp  args.hpp  args_test.cpp  mode.hpp  mode_test.cpp  organizer.cpp  organizer.hpp
libs/libcategory/: CMakeLists.txt
libs/libcategory/libcategory/: category.cpp  category.hpp  category_test.cpp  mappings.hpp
libs/liblogger/: CMakeLists.txt
libs/liblogger/liblogger/: logger.cpp  logger.hpp
libs/liborganizer/: CMakeLists.txt
libs/liborganizer/liborganizer/: organizer.cpp  organizer.hpp  organizer_test.cpp  reversed_suffix_trie.cpp  reversed_suffix_trie.hpp  trienode.hpp
libs/libutility/: CMakeLists.txt
libs/libutility/libutility/: args.cpp  args.hpp  category.cpp  category.hpp  category_test.cpp  config.cpp  config.hpp  default_config.hpp  fs_operations.hpp  mappings.hpp  options.hpp  print_help.hpp
